<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_margin="10dp"
    android:background="@color/purple_200"
    android:layout_height="wrap_content">

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical"
           android:layout_margin="8dp"
           android:padding="8dp"
           >
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/company"
               android:textStyle="bold"
               android:textColor="@color/black"
               android:textSize="20sp"
               android:id="@+id/display_company_name"
               android:padding="3dp"
               android:layout_margin="3dp"
               />
           <TextView
               android:textColor="@color/black"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/title"
               android:textStyle="bold"
               android:textSize="18sp"
               android:id="@+id/display_title_jobs"
               android:padding="3dp"
               android:layout_margin="3dp"
               />
           <TextView
               android:textColor="@color/black"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/description"
               android:textSize="17sp"
               android:id="@+id/display_description"
               android:padding="3dp"
               android:layout_margin="3dp"
               />
           <TextView
               android:textColor="@color/black"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/salary"
               android:textSize="17sp"
               android:textStyle="bold"
               android:id="@+id/display_salary"
               android:padding="3dp"
               android:layout_margin="3dp"
               />
           <TextView
               android:textColor="@color/black"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/date"
               android:textSize="17sp"
               android:id="@+id/display_date"
               android:padding="3dp"
               android:layout_margin="3dp"
               />
           <TextView
               android:textColor="@color/black"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/date"
               android:textSize="17sp"
               android:textStyle="bold"
               android:id="@+id/display_number_of_vacancy"
               android:padding="3dp"
               android:layout_margin="3dp"
               />
           <Button
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:background="@drawable/button_shape"
               android:text="@string/apply"
               android:textColor="@color/white"
               android:id="@+id/apply_jobs"
               android:layout_gravity="right"
               />
       </LinearLayout>



</androidx.cardview.widget.CardView>