<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_margin="10dp"
    android:background="@color/purple_200"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="8dp"
        android:padding="8dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:id="@+id/display_applicant_name"
            android:padding="3dp"
            android:layout_margin="3dp"
            />
        <TextView
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="18sp"
            android:id="@+id/display_applicant_email"
            android:padding="3dp"
            android:layout_margin="3dp"
            />
        <TextView
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textSize="17sp"
            android:id="@+id/display_applicant_phone"
            android:padding="3dp"
            android:layout_margin="3dp"
            />
        <TextView
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Summary"
            android:textSize="17sp"
            android:id="@+id/display_summary_applicant"
            android:padding="3dp"
            android:layout_margin="3dp"
            />
        <TextView
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/education"
            android:textSize="17sp"
            android:id="@+id/display_education"
            android:padding="3dp"
            android:layout_margin="3dp"
            />
        <TextView
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/skills_amp_endorsements"
            android:textSize="17sp"
            android:id="@+id/display_skill"
            android:padding="3dp"
            android:layout_margin="3dp"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_shape"
            android:text="Approve"
            android:textColor="@color/white"
            android:id="@+id/approve"
            android:layout_gravity="right"
            />
    </LinearLayout>



</androidx.cardview.widget.CardView>