<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <ImageView
        android:id="@+id/login_img"
        android:layout_width="wrap_content"
        android:layout_height="95dp"
        android:src="@drawable/ic_careercolor"
        android:layout_marginTop="30dp"
        android:outlineAmbientShadowColor="@color/black"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/layout_choose"
        android:layout_below="@+id/login_img"
        android:orientation="horizontal"
        android:layout_marginTop="8dp">
        <CheckBox android:id="@+id/checkbox_jobSeeker_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/job_seeker"
            android:layout_marginStart="30dp"
            />
        <CheckBox android:id="@+id/checkbox_company_signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/company"
            android:layout_marginStart="120dp"
            />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        android:textSize="25sp"
        android:id="@+id/signUp_txt"
        android:layout_marginTop="10dp"
        android:padding="8dp"
        android:layout_below="@+id/layout_choose"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:id="@+id/name_edtxt"
        android:layout_margin="10dp"
        android:padding="15dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:layout_below="@+id/signUp_txt"
        android:background="@drawable/edit_txt_shape"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:id="@+id/emailSignUp_edtxt"
        android:layout_margin="10dp"
        android:padding="15dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:layout_below="@+id/phoneNumber_edtTxt"
        android:background="@drawable/edit_txt_shape"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:id="@+id/passwordSignUp_edtxt"
        android:layout_margin="10dp"
        android:padding="15dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:layout_below="@+id/emailSignUp_edtxt"
        android:background="@drawable/edit_txt_shape"
        android:inputType="textPassword"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Phone Number"
        android:id="@+id/phoneNumber_edtTxt"
        android:layout_margin="10dp"
        android:padding="15dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:layout_below="@+id/address_edtText"
        android:background="@drawable/edit_txt_shape"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Address"
        android:id="@+id/address_edtText"
        android:layout_margin="10dp"
        android:padding="15dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:layout_below="@+id/name_edtxt"
        android:background="@drawable/edit_txt_shape"
        />
    <Button
        android:id="@+id/signUp_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordSignUp_edtxt"
        android:layout_centerInParent="true"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:background="@drawable/button_shape"
        android:shadowColor="@color/black"
        android:layout_marginTop="10dp"
        />

</RelativeLayout>